--- a/aa_bb/templates/aa_bb/index.html
+++ b/aa_bb/templates/aa_bb/index.html
@@ -253,6 +253,7 @@ async function loadAll(option) {
   hideGeneral();
   hideContract();
   showSpinner(true);
+  fetch("{% url 'BigBrother:warm_cache' %}?option=" + encodeURIComponent(option));
 
   for (let i = 0; i < CARD_DEFINITIONS.length; i++) {
     const { key, title } = CARD_DEFINITIONS[i];
